Séparé serveur en plusieurs chanels

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    test
+    Ouvrir un serveur websocket à l'url<br>
+    <strong>ws://chaosmedia.herokuapp.com/socket/:chanel</strong>
+    remplacer :chanel par 1, 2, 3 ou 4, dépendant du chanel désiré
 </body>
 </html>
